--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
     "react-bootstrap": "^1.4.3",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.1",
-    "styled-components": "^5.2.1",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
@@ -38,5 +37,11 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "tailwindcss": "^3.4.0"
+  },
+  "exports": {
+    "./lib/tokenize": "./path/to/tokenize-module.js"
   }
 }
